[package]
name = "savant"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"
description = "An experimental chess engine."
readme = "README.md"
repository = "https://github.com/agausmann/savant"
license = "MIT"
keywords = ["chess", "ai"]
categories = ["games", "mathematics", "simulation"]

[badges]
travis-ci = { repository = "agausmann/savant", branch = "master" }
maintenanence = { status = "experimental" }

[dependencies]
enum-map = "0.6.2"

[profile.test]
# For perft tests which are quite expensive
opt-level = 3
